namespace HollowKnight.Collision
{

    public enum CollisionSide
    {
        None,
        Left,
        Right,
        Top,
        Bottom
    }
}
